@@ -9,7 +9,6 @@ import com.example.flashcards.entity.Category;
 import com.example.flashcards.entity.Flashcard;
 import com.example.flashcards.mapper.FlashcardMapper;
 import com.example.flashcards.repository.FlashcardRepository;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -37,7 +36,7 @@ class FlashcardServiceTest {
     Flashcard f1 = new Flashcard(1L, "Q1", "A1", category);
     Flashcard f2 = new Flashcard(2L, "Q2", "A2", category);
 
-    when(flashcardRepository.findAll()).thenReturn(Arrays.asList(f1, f2));
+    when(flashcardRepository.findAllWithCategory()).thenReturn(List.of(f1, f2));
 
     List<Flashcard> flashcards = flashcardService.getAllFlashcards();
     List<FlashcardDto> dtoList = flashcards.stream().map(FlashcardMapper::toDto).toList();
@@ -73,8 +72,9 @@ class FlashcardServiceTest {
   @Test
   void testUpdateFlashcard_NotFound() {
     when(flashcardRepository.findById(1L)).thenReturn(Optional.empty());
-    Flashcard flashcard = new Flashcard();
-    assertThrows(RuntimeException.class, () -> flashcardService.updateFlashcard(1L, flashcard));
+
+    assertThrows(
+        RuntimeException.class, () -> flashcardService.updateFlashcard(1L, new Flashcard()));
   }
 
   @Test
